external-crates/move/crates/move-compiler/tests/move_check/parser/module_missing_rbrace.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 277
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/module_missing_rbrace.move:4:1
  │
4 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'
